--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,10 @@
     font-style: normal;
     font-variation-settings: "wdth" 100;
 }
+
+.edu-nsw-act-hand-pre-regular {
+    font-family: "Edu NSW ACT Hand Pre", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
