--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,10 @@
     font-weight: 400;
     font-style: normal;
 }
+
+.nunito-regular {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
